--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
   <body>
     Hello World. I am alive
-    Nimit Parekh:Thunder Bay
+   <p> Nimit Parekh:Thunder Bay</p>
   </body>
 </html>
